@@ -13,3 +13,4 @@ CHECK_INTERVAL = DEFAULT_CONNECTION_CHECKER_INTERVAL * 6
 CONNECTION_CHECKER_INTERVAL = DEFAULT_CONNECTION_CHECKER_INTERVAL
 RECONNECT_WAIT = DEFAULT_RECONNECT_WAIT
 TIMEOUT = DEFAULT_TIMEOUT
+EXTENDED_SYSVARS = False
